# cheime-win

./: .gitignore  .gitmodules  Cargo.toml  DEPLOY.md  README.md  bench_hot.py
.github/workflows/: ci.yml
config/: ui.yaml
crates/cheime-engine-host/: Cargo.toml
crates/cheime-engine-host/src/: main.rs  pipe_handle.rs  server.rs  session_runner.rs
crates/cheime-installer/: Cargo.toml
crates/cheime-installer/src/: main.rs
crates/cheime-probe/: Cargo.toml  main.rs  profile.rs  registered.rs
crates/cheime-tip/: Cargo.toml  cheime-tip.def
crates/cheime-tip-core/: Cargo.toml
crates/cheime-tip-core/src/: channel.rs  error.rs  layout.rs  lib.rs  pipe.rs  ui_config.rs
crates/cheime-tip/src/: candidate_window.rs  class_factory.rs  dll_exports.rs  edit_session.rs  exports.rs  io_thread.rs  key_handler.rs  language_bar.rs  lib.rs  pipe_handle.rs  runtime.rs  tip.rs  tsf_interfaces.rs  ui_settings.rs
data/: emoji.txt
data/dicts/: others.dict.yaml  pinyin_small.dict.yaml
docs/superpowers/plans/: 2026-07-19-cheime-win-frontend-implementation.md  2026-07-20-cheime-tip-safe-com-recovery.md  2026-07-22-fuzzy-pinyin-abbreviation.md  tiered-index.md
sandbox/: CheIME.wsb.template  diagnose.ps1  enable-sandbox.bat  enable-sandbox.ps1  guest-run.ps1  run.bat
scripts/: build.ps1  dev-test.ps1  generate-windows-icons.ps1  install.ps1  start-sandbox.ps1  uninstall.ps1  verify-tip-guest.ps1
tests/integration/: common.rs  fake_ime_roundtrip.rs
