[package]
name = "cheime-engine-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cheime-engine"
path = "src/main.rs"

[dependencies]
cheime-model.workspace = true
cheime-protocol.workspace = true
cheime-wire.workspace = true
cheime-pipeline.workspace = true
cheime-tip-core = { path = "../cheime-tip-core" }
cheime-session.workspace = true
cheime-dictionary.workspace = true
cheime-config.workspace = true
cheime-user-data.workspace = true
parking_lot.workspace = true
serde_yaml.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
windows.workspace = true
